k8s/prod/app-frontend-deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend-deployment
  namespace: prod
  labels:
    app: app-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-frontend
  template:
    metadata:
      labels:
        app: app-frontend
    spec:
      containers:
      - name: app-frontend
        image: nexus.encadeado.com:5005/app/frontend:master.18
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: regcred
