k8s/prod/app-frontend-svc-prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-frontend
  name: app-frontend-svc-prod
  namespace: prod
spec:
  ports:
  - nodePort: 32675
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: app-frontend
  type: LoadBalancer
status:
  loadBalancer: {}
